定义路由，分离部分模板，链接页面

--- a/index.html
+++ b/index.html
@@ -2,8 +2,34 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>eleme-vue</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
+    <title>饿了么</title>
+    <link rel="stylesheet" href="/node_modules/font-awesome/css/font-awesome.min.css">
   </head>
+  <script>
+    //自适应屏幕改变html的font-size大小
+    (function (doc, win) {
+      var docEl = doc.documentElement,
+        resizeEvt = 'orientationchange' in window ? 'orientationchange' : 'resize',
+        recalc = function () {
+          var clientWidth = docEl.clientWidth;
+          if (!clientWidth) return;
+          if(clientWidth<375){
+            clientWidth=375;
+          }
+          docEl.style.fontSize = 100 * (clientWidth / 375) + 'px';
+        };
+
+      if (!doc.addEventListener) return;
+      win.addEventListener(resizeEvt, recalc, false);
+      doc.addEventListener('DOMContentLoaded', recalc, false);
+    })(document, window);
+
+    var baseUrl="http://cangdu.org:8001";
+    var imgBaseUrl="http://images.cangdu.org:8001";
+  </script>
+
+
   <body>
     <div id="app"></div>
     <script src="/dist/build.js"></script>
